--- a/urban-octo-telegram-main 3/Develop/index.html
+++ b/urban-octo-telegram-main 3/Develop/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services</title>
 </head>
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>Hori<span class="seo">seo</span>n<h1>
+
+        <div> 
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -79,11 +80,12 @@
     </div>
 
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
 </body>
 
 </html>
