--- a/urban-octo-telegram-main 3/Develop/index.html
+++ b/urban-octo-telegram-main 3/Develop/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n<h1>
 
-        <div> 
+        <main> 
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,10 +23,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </main>
     </header>
 
-    <div class="hero">
+    <div class="hero" alt="Image of people in a meeting">
     </div>
 
     <main class="content">
